# host

./: AGENTS.md  README.md  pyproject.toml
.cursor/rules/: domains-inventory.mdc
docs/: NEXT-STEPS.md  claude-connectors.md  domains-and-dns.md  domains.yaml.example  host.env.example  hosting-python.md  hosting.md  mcp-gateway-rollout-prompt.md  phase4-static-sites.md  platform-architecture.md  services-mcp.md
src/host/: __init__.py  __main__.py  cli.py  config.py  deploy.py  deploy_mcp.py  deploy_mcp_gateway.py  domains.py  http_server.py  inventory.py  manifest.py  mcp_server.py  registry.py  scaffold.py  setup_deploy.py  setup_fish_cloud.py  sitehost.py  wsgi.py
templates/: domains.yaml.example
templates/github-workflow/: deploy.yml
templates/mcp-services/: fish-sync.service  fish-sync.timer  mcp-service.service.template  nginx.conf  requirements-deploy.txt  tesla-oauth-callback.html
templates/python-app/: README.md  passenger_wsgi.py  requirements.txt
templates/static-site/: host.yaml
templates/static-site/site/: index.html  style.css
