[project]
name = "host"
version = "0.1.0"
description = "Static site scaffolding, rsync deploy, and Host MCP for my.hosting.com"
requires-python = ">=3.10"
dependencies = [
    "cmdline",
    "fastmcp>=2.0.0",
    "ken-mcp",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "a2wsgi>=1.10.0",
    "util",
]

[tool.uv.sources]
cmdline = { path = "../shared/cmdline", editable = true }
ken-mcp = { path = "../shared/mcp", editable = true }
util = { path = "../util", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/host"]
